tests/003.php
<?php
var_dump(phiz_test2());
var_dump(phiz_test2('PHP'));
?>
